--- a/static/assets/css/header.css
+++ b/static/assets/css/header.css
@@ -7,7 +7,7 @@
 .main-header{
     position:relative;
     z-index:99;
-    width:100%;
+    width:99%;
 }
 
 .header-top{
