--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -22,6 +22,8 @@
 @import url('odometer-theme-default.css');
 @import url('jquery.bootstrap-touchspin.css');
 
+
+
 /*** 
 
 ====================================================================
@@ -2976,7 +2978,11 @@
 
 .testimonial-block_two-inner{
     position: relative;
-    padding: 50px 50px;
+    padding: 40px 40px;
+    height: 500px;          /* Fixed height for uniformity */
+    overflow: hidden;       /* Prevent overflow */
+    display: flex;
+    flex-direction: column;
 }
 
 .testimonial-block_two-inner::before{
@@ -2986,18 +2992,19 @@
     top: 0px;
     right: 0px;
     bottom: 0px;
-    /* CHANGED: Replaced Yellow/Green with Navy/Red Gradient */
     background: var(--main-color);
     background: linear-gradient(to right, var(--main-color) 0%, var(--color-two) 100%);
-	border-radius: 15px;
+    border-radius: 15px;
+    height: 500px;    
 }
 
 .testimonial-block_two-rating{
     position: relative;
     border-radius: 5px;
-    padding: 10px 16px;
+    padding: 8px 14px;
     display: inline-block;
-    background-color: var(--white-color);
+    /* background-color: var(--white-color); */
+    flex-shrink: 0;
 }
 
 .testimonial-block_two-rating span{
@@ -3010,53 +3017,63 @@
 .testimonial-block_two-heading{
     position: relative;
     font-weight: 500;
-    font-size: var(--font-30);
-    /* CHANGED: Text to White for contrast */
+    font-size: 30px;
     color: var(--white-color);
-    margin-top: var(--margin-top-40);
+    margin-top: 25px;
+    line-height: 1.3;
+    flex-shrink: 0;
+    
+    /* Truncate heading if too long (max 2 lines) */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .testimonial-block_two-text {
     position: relative;
     z-index: 2;
-    
     font-weight: 400;
     opacity: 0.80;
     font-size: var(--font-24);
     color: var(--white-color);
-    margin-top: var(--margin-top-35);
-    padding-right: var(--padding-right-20);
-
-    /* --- UPDATED FOR 6 LINES --- */
-    line-height: 38px;
-    height: 220px;           /* 38px * 6 lines = 228px */
+    margin-top: 20px;
+    padding-right: 15px;
+    flex: 1;
+    
+    /* Updated for proper truncation within card */
+    line-height: 1.5;
+    max-height: 180px;       /* Adjusted to fit within 500px total */
     
     display: -webkit-box;
-    -webkit-line-clamp: 6;   /* Cut off text after the 6th line */
+    -webkit-line-clamp: 5;   /* Cut off text after 5 lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
 .testimonial-block_two-author{
     position: relative;
-    min-height: 99px;
+    min-height: 80px;
     font-weight: 500;
     font-size: var(--font-22);
-    /* CHANGED: Text to White for contrast */
     color: var(--white-color);
-    margin-top: var(--margin-top-40);
-    padding-top: var(--padding-top-25);
-    padding-left: var(--padding-left-115);
+    margin-top: 20px;
+    padding-top: 0px;
+    padding-left: 95px;
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .testimonial-block_two-author .author-image{
     position: absolute;
     left: 0px;
     top: 0px;
-    width: 99px;
-    height: 99px;
+    width: 80px;
+    height: 80px;
     overflow: hidden;
     border-radius: 50%;
-    /* Added border to make image pop on dark background */
     border: 3px solid var(--white-color);
 }
 
@@ -3066,28 +3083,27 @@
     font-weight: 400;
     border-radius: 150px;
     font-size: var(--font-16);
-    /* CHANGED: Text to White/Light Grey */
     color: var(--color-four);
-    margin-top: var(--margin-top-5);
+    margin-top: 5px;
 }
 
 .testimonial-block_two_ameen{
     position: absolute;
     right: 20px;
-    bottom: 0px;
+    bottom: 15px;
     -webkit-animation: icon-bounce 0.8s ease-out infinite;
     animation: icon-bounce 0.8s ease-out infinite;
-    /* Ensure icon is visible (white) */
     color: var(--white-color);
     opacity: 0.2;
+    z-index: 1;
 }
 
 .testimonial-block_two-icon{
     position: absolute;
     right: 25px;
     top: 30px;
-    /* Ensure icon is visible */
     color: var(--white-color) !important;
+    z-index: 1;
 }
 
 .testimonial-two_pagination{
@@ -3112,6 +3128,36 @@
 .testimonial-two_pagination .swiper-pagination-bullet:hover{
     border-color: var(--main-color);
     background-color: var(--main-color);
+}
+
+/* Mobile responsive adjustments */
+@media (max-width: 768px) {
+    .testimonial-block_two-inner{
+        padding: 30px 25px;
+        height: 500px;
+    }
+    
+    .testimonial-block_two-heading{
+        font-size: 24px;
+        margin-top: 20px;
+    }
+    
+    .testimonial-block_two-text{
+        font-size: 18px;
+        max-height: 160px;
+        -webkit-line-clamp: 5;
+    }
+    
+    .testimonial-block_two-author{
+        font-size: 18px;
+        padding-left: 75px;
+        min-height: 70px;
+    }
+    
+    .testimonial-block_two-author .author-image{
+        width: 65px;
+        height: 65px;
+    }
 }
 /*** 
 
